:construction_worker: Adding CI build system closes #3

--- a/build.gradle
+++ b/build.gradle
@@ -80,3 +80,9 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+
+buildScan {
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+    publishAlways()
+}
