--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,10 @@ buildscript {
     }
 }
 
+plugins {
+    id "com.gradle.build-scan" version "1.15.1"
+}
+
 apply plugin: 'kotlin'
 apply plugin: 'kotlin-spring'
 apply plugin: 'kotlin-kapt'
@@ -72,6 +76,7 @@ dependencies {
         exclude module: 'junit'
     }
     testCompile('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testCompile('com.nhaarman:mockito-kotlin:1.5.0')
     testImplementation('org.junit.jupiter:junit-jupiter-api')
     testRuntimeOnly('org.junit.jupiter:junit-jupiter-engine')
     kapt('org.springframework.boot:spring-boot-configuration-processor')
